tests/lit/tcheck/info_01.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2026-2026 Intel Corporation

function F()
begin
    let x := "";
    Std::Info(1, x);
    // CHECK: Type error: Error in format string: Info must be used with a literal format string like "x = {x}"
end
